--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack -p",
+    "start:dev": "webpack-dev-server",
     "start": "webpack-dev-server --output-public-path=/build"
   },
   "repository": {
