--- a/package.json
+++ b/package.json
@@ -53,5 +53,7 @@
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "smoothscroll-polyfill": "^0.4.4"
+  }
 }
