--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "css-loader": "^4.3.0",
     "dayjs": "^1.8.35",
     "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^6.1.0",
     "html-webpack-plugin": "^4.4.1",
     "jwt-decode": "^3.0.0-beta.2",
     "mini-css-extract-plugin": "^0.11.1",
