--- a/package.json
+++ b/package.json
@@ -28,29 +28,29 @@
   },
   "homepage": "https://github.com/lekeodewuyi/explorer-one-frontend#readme",
   "devDependencies": {
-    "@babel/cli": "^7.11.6",
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
     "autoprefixer": "^9.8.6",
     "axios": "^0.20.0",
     "babel-core": "^6.26.3",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^8.2.1",
     "babel-preset-env": "^1.7.0",
-    "browser-image-compression": "^1.0.12",
+    "browser-image-compression": "^1.0.13",
     "css-loader": "^4.3.0",
-    "dayjs": "^1.8.35",
+    "dayjs": "^1.9.6",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^6.1.0",
-    "html-webpack-plugin": "^4.4.1",
-    "jwt-decode": "^3.0.0-beta.2",
-    "mini-css-extract-plugin": "^0.11.1",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^4.5.0",
+    "jwt-decode": "^3.1.1",
+    "mini-css-extract-plugin": "^0.11.3",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
-    "postcss-loader": "^4.0.1",
-    "sass-loader": "^10.0.2",
-    "style-loader": "^1.2.1",
-    "terser-webpack-plugin": "^4.1.0",
+    "postcss-loader": "^4.0.4",
+    "sass-loader": "^10.1.0",
+    "style-loader": "^1.3.0",
+    "terser-webpack-plugin": "^4.2.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.44.1",
+    "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
